src/deployments/kavanet-io/deployment.yaml
####################################
#
#     #                  
#    # #   #####  #####  
#   #   #  #    # #    # 
#  #     # #    # #    # 
#  ####### #####  #####  
#  #     # #      #      
#  #     # #      #     
#
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavanet-io
  namespace: kavanet-io
  labels:
    app: kavanet-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavanet-io
  template:
    metadata:
      labels:
        app: kavanet-io
        # something: name
    spec:
      containers:
        - name: kavanet-io
          image: localhost:5000/kavanet.io
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits: 
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always

####################################
#
#     #####                                       
#    #     # ###### #####  #    # #  ####  ###### 
#    #       #      #    # #    # # #    # #      
#     #####  #####  #    # #    # # #      #####  
#          # #      #####  #    # # #      #      
#    #     # #      #   #   #  #  # #    # #      
#     #####  ###### #    #   ##   #  ####  ######
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: kavanet-io-service
  namespace: kavanet-io
spec:
  type: ClusterIP
  selector:
    app: kavanet-io
  ports:
    - protocol: TCP
      port: 80

####################################
#
#   ###                                           
#    #  #    #  ####  #####  ######  ####   ####  
#    #  ##   # #    # #    # #      #      #      
#    #  # #  # #      #    # #####   ####   ####  
#    #  #  # # #  ### #####  #           #      # 
#    #  #   ## #    # #   #  #      #    # #    # 
#   ### #    #  ####  #    # ######  ####   ####  
#
####################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavanet-io-ingress
  namespace: kavanet-io
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.frontend.passHostHeader: "false"
spec:
  rules:
  - host: kavanet.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kavanet-io-service
            port: 
              number: 80
  tls:
  - hosts:
    - kavanet.io
    secretName: kavanet.io-tls

####################################
#
#    #     #                         ######                         #######                     
#    ##    #  ####  #####  ######    #     #  ####  #####  #####       #    ######  ####  ##### 
#    # #   # #    # #    # #         #     # #    # #    #   #         #    #      #        #   
#    #  #  # #    # #    # #####     ######  #    # #    #   #         #    #####   ####    #   
#    #   # # #    # #    # #         #       #    # #####    #         #    #           #   #   
#    #    ## #    # #    # #         #       #    # #   #    #         #    #      #    #   #   
#    #     #  ####  #####  ######    #        ####  #    #   #         #    ######  ####    #   
#
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: kavanet-io-entry-point
  namespace: kavanet-io
spec:
  type: NodePort
  selector:
    app: kavanet-io
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31001
